# pr1_2

./: CMakeLists.txt
include/: data.h  deque.h  list_deque.h  menu.h  simple_vector_deque.h  vector_deque.h
src/: list_deque.cpp  main.cpp  menu.cpp  simple_vector_deque.cpp  vector_deque.cpp  vector_deque_copy.cpp
